Se agregaron archivos de segunda clase

--- a/clase-01/etiquetas/index.html
+++ b/clase-01/etiquetas/index.html
@@ -16,7 +16,7 @@
     <a
       href="https://meet.google.com/bwn-wdxa-kyc?pli=1"
       target="_blank"
-      title="este es un link"
+      title="este es un link"clase-01/formularios/index.html
       >link</a
     >
 
